--- a/index.ejs
+++ b/index.ejs
@@ -48,19 +48,19 @@ Notes:
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 centerText">
                 <ul class="list-group tm-home-list tm-bg-black centerText">
                     <li class="d-flex justify-content-between align-items-center">
-                        <a href="views\register.ejs"class="external" class="tm-white-text">Update</a>
+                        <a href="views/register.ejs"class="external" class="tm-white-text">Update</a>
                     </li>
                     <li class="d-flex justify-content-between align-items-center">
-                        <a href="views\signup.ejs" class="external" class="tm-white-text">Sign Up</a>
+                        <a href="views/signup.ejs" class="external" class="tm-white-text">Sign Up</a>
                     </li>
                     <li class="d-flex justify-content-between align-items-center">
-                        <a href="views\login.html" class="external" class="tm-white-text">Login</a>
+                        <a href="views/login.html" class="external" class="tm-white-text">Login</a>
                     </li>
                     <li class="d-flex justify-content-between align-items-center">
-                        <a href="views\survey.html" class="external" class="tm-white-text">Survey</a>
+                        <a href="views/survey.html" class="external" class="tm-white-text">Survey</a>
                     </li>
                     <li class="d-flex justify-content-between align-items-center">
-                        <a href="views\routines.ejs" class="external" class="tm-white-text">Routines</a>
+                        <a href="views/routines.ejs" class="external" class="tm-white-text">Routines</a>
                     </li>
                 </ul>
             </div>
